--- a/R/REPORT_GENERATOR.Rmd
+++ b/R/REPORT_GENERATOR.Rmd
@@ -749,14 +749,16 @@ if(p_type == "log2FC"){
 
 ## Metabolite set enrichment analysis (MSEA) 
 
-**MSEA was performed for the list of significantly changed metabolites using Metaboanalyst R and the KEGG pathway database.**
+**MSEA was performed for the list of significantly changed metabolites using Metaboanalyst R and the SMPDB (Small Molecule Pathway Database) database.**
 
-Name matching between the SECIM library database and the Metaboanalyst R KEGG pathway database is imperfect and some significantly changed compounds may have been ommitted from the MSEA. Only "level 1" identified metabolites are input in the MSEA.
+Name matching between the SECIM library database and the Metaboanalyst R MSEA database is imperfect and some significantly changed compounds may have been ommitted from the MSEA. Only metabolites identified with high confidence are input in the MSEA.
+
+Enrichment Ratio is computed by Hits / Expected, where hits = observed hits; expected = expected hits (see the Table below)
 
 ```{r, echo=FALSE, results='asis'}
 result <- tryCatch({
   capture.output({
-    source("/blue/timgarrett/hkates/SECIM_Reporting/R/MSEA.R")
+    source("/blue/timgarrett/hkates/SECIM_Reporting/R/MSEA.smpdb.R")
   }, type = "output")
   NULL  # Successfully executed, no special message to print
 }, error = function(e) {
@@ -782,6 +784,10 @@ tryCatch({
   # Print a custom message or handle the error differently
   cat("No overlap between significantly enriched compound IDs and KEGG database or image could not be displayed.")
 })
+```
+
+```{r}
+datatable(result_tbl)
 ```
 
 # Visualizations of Changed Metabolites
@@ -1341,7 +1347,7 @@ for (i in 1:length(contrasts)){
 if(p_type=="adj.p.value"){
   top20_sigOE_genes <- paste(Client_Data_Download[["report_results"]] %>% filter(contrast==contrast[[i]]) %>% filter(compound %in% sig_peaks[[contrasts[[i]]]]) %>% mutate(ID_confidence = factor(ID_confidence, levels = c("High", "Low", ""), ordered = TRUE)) %>%
   arrange(ID_confidence,adj.p.value) %>% slice_head(n=20) %>% select(row.mode) %>% unlist(),
-  Client_Data_Download[["report_results"]] %>% filter(contrast==contrast[[i]]) %>% filter(compound %in% sig_peaks[[contrasts[[i]]]])  %>% mutate(ID_confidence = factor(ID_confidence, levels = c("1", "3", ""), ordered = TRUE)) %>%
+  Client_Data_Download[["report_results"]] %>% filter(contrast==contrast[[i]]) %>% filter(compound %in% sig_peaks[[contrasts[[i]]]])  %>% mutate(ID_confidence = factor(ID_confidence, levels = c("High", "Low", ""), ordered = TRUE)) %>%
   arrange(ID_confidence,adj.p.value)  %>% slice_head(n=20) %>% select(compound) %>% unlist(),sep="_")
 }
 if(p_type=="p.value"){
@@ -1440,16 +1446,16 @@ if (!dir.exists(output_dir)) {
 if(sig_knowns < 20){
   up_compounds <- Client_Data_Download[["report_results"]] %>% 
     filter(contrast==contrasts[[i]]) %>% filter(compound %in% sig_peaks[[contrasts[[i]]]]) %>%
-           filter(log2FC > 0) %>% filter(!KEGG=="") %>% pull(KEGG)
+           filter(log2FC > 0) %>% filter(str_trim(KEGG) != "") %>% pull(KEGG)
   down_compounds <- Client_Data_Download[["report_results"]] %>% 
     filter(contrast==contrasts[[i]]) %>% filter(compound %in% sig_peaks[[contrasts[[i]]]]) %>%
-           filter(log2FC < 0) %>% filter(!KEGG=="") %>% pull(KEGG)} else{
+           filter(log2FC < 0) %>% filter(str_trim(KEGG) != "") %>% pull(KEGG)} else{
         up_compounds <- Client_Data_Download[["report_results"]] %>% 
     filter(contrast==contrasts[[i]]) %>% filter(compound %in% sig_peaks[[contrasts[[i]]]]) %>%
-           filter(log2FC > 0) %>% filter(ID_confidence=="High") %>% filter(!KEGG=="") %>% pull(KEGG)
+           filter(log2FC > 0) %>% filter(ID_confidence=="High") %>% filter(str_trim(KEGG) != "") %>% pull(KEGG)
          down_compounds <- Client_Data_Download[["report_results"]] %>% 
     filter(contrast==contrasts[[i]]) %>% filter(compound %in% sig_peaks[[contrasts[[i]]]]) %>%
-           filter(log2FC < 0) %>% filter(ID_confidence=="High") %>% filter(!KEGG=="") %>% pull(KEGG)
+           filter(log2FC < 0) %>% filter(ID_confidence=="High") %>% filter(str_trim(KEGG) != "")%>% pull(KEGG)
            }
 
 # Add +1 or -1 to each compound
@@ -1520,7 +1526,6 @@ filtered_pathways <- names(pathway_categories)[!sapply(pathway_categories, funct
 
 # Convert pathways to "hsa" format
 filtered_pathways <- gsub("map","hsa", filtered_pathways)
-library(pathview)
 library(httr)
 library(xml2)
 
