Added violin plot

--- a/R/REPORT_GENERATOR.Rmd
+++ b/R/REPORT_GENERATOR.Rmd
@@ -787,7 +787,12 @@ tryCatch({
 ```
 
 ```{r}
-datatable(result_tbl)
+# Try to display the table with a tryCatch block
+tryCatch({
+  datatable(result_tbl)
+}, error = function(e) {
+  # Do nothing on error
+})
 ```
 
 # Visualizations of Changed Metabolites
@@ -1321,6 +1326,132 @@ showarrow = FALSE) %>% layout(autosize = F, width = 800, height = 400, margin = 
 boxplotlist[[i]]=plot #this works if you just print(plot), the plots are right
 }
 htmltools::tagList(boxplotlist)
+```
+
+## Per-contrast violin plot of any of the top changed metabolites across sample class</span>\n
+
+```{r}
+if(test_type == "nostats"){
+  html_text <- "Per-contrast boxplot of any of the top changed metabolites across sample class</span><br><br>"
+} else {
+  html_text <- "Per-contrast boxplot of any of the top significantly changed metabolites across sample class</span><br><br>"
+}
+htmltools::HTML(html_text)
+```
+
+```{r violin}
+violinplotlist = list()
+for (i in c(1:length(contrasts))){
+
+  # Manual changes needed for where metabolite data begins and for groupvar
+  ## Order results by p.value values
+  if(p_type=="adj.p.value"){
+    top20_sigOE_genes <- paste(Client_Data_Download[["report_results"]] %>% filter(contrast==contrast[[i]]) %>% filter(compound %in% sig_peaks[[contrasts[[i]]]]) %>% mutate(ID_confidence = factor(ID_confidence, levels = c("High", "Low", ""), ordered = TRUE)) %>%
+                                arrange(ID_confidence,adj.p.value) %>% slice_head(n=20) %>% select(row.mode) %>% unlist(),
+                              Client_Data_Download[["report_results"]] %>% filter(contrast==contrast[[i]]) %>% filter(compound %in% sig_peaks[[contrasts[[i]]]])  %>% mutate(ID_confidence = factor(ID_confidence, levels = c("High", "Low", ""), ordered = TRUE)) %>%
+                                arrange(ID_confidence,adj.p.value)  %>% slice_head(n=20) %>% select(compound) %>% unlist(),sep="_")
+  }
+  if(p_type=="p.value"){
+    top20_sigOE_genes <- paste(Client_Data_Download[["report_results"]] %>% filter(contrast==contrast[[i]]) %>% filter(compound %in% sig_peaks[[contrasts[[i]]]]) %>% mutate(ID_confidence = factor(ID_confidence, levels = c("High", "Low", ""), ordered = TRUE)) %>%
+                                arrange(ID_confidence,p.value) %>% slice_head(n=20) %>% select(row.mode) %>% unlist(),
+                              Client_Data_Download[["report_results"]] %>% filter(contrast==contrast[[i]]) %>% filter(compound %in% sig_peaks[[contrasts[[i]]]])  %>% mutate(ID_confidence = factor(ID_confidence, levels = c("High", "Low", ""), ordered = TRUE)) %>%
+                                arrange(ID_confidence,p.value)  %>% slice_head(n=20) %>% select(compound) %>% unlist(),sep="_")
+  }
+  if(p_type=="log2FC"){
+    top20_sigOE_genes <- paste(Client_Data_Download[["report_results"]] %>% filter(contrast==contrast[[i]]) %>% filter(compound %in% sig_peaks[[contrasts[[i]]]]) %>% arrange(desc(log2FC)) %>% slice_head(n=20) %>% select(row.mode) %>% unlist(),
+                              Client_Data_Download[["report_results"]] %>% filter(contrast==contrast[[i]]) %>% filter(compound %in% sig_peaks[[contrasts[[i]]]]) %>% arrange(desc(log2FC)) %>% slice_head(n=20) %>% select(compound) %>% unlist(),sep="_")
+  }
+
+  # Combine - CHANGE where n:nrow begins depends on...number of metadata? 
+  normalized_int <- rbind(
+    Client_Data_Download[["Pos.normalized.data"]][num_of_metadata:nrow(Client_Data_Download[["Pos.normalized.data"]]),3:(num_samples+2)],
+    Client_Data_Download[["Neg.normalized.data"]][num_of_metadata:nrow(Client_Data_Download[["Neg.normalized.data"]]),3:(num_samples+2)]
+  )
+
+  rownames(normalized_int) <- c(paste(Client_Data_Download[["Pos.normalized.data"]]$row.ID,Client_Data_Download[["Pos.normalized.data"]]$mode,Client_Data_Download[["Pos.normalized.data"]]$compound,sep="_")[-c(1:(num_of_metadata-1))],paste(Client_Data_Download[["Neg.normalized.data"]]$row.ID,Client_Data_Download[["Neg.normalized.data"]]$mode,Client_Data_Download[["Neg.normalized.data"]]$compound,sep="_")[-c(1:(num_of_metadata-1))])
+
+  normalized_int <- filter(normalized_int, rownames(normalized_int) %in% top20_sigOE_genes)
+
+  rownames(normalized_int) <- gsub("^\\d+_(Pos|Neg)_", "", rownames(normalized_int))
+
+  # The boxplot data frame is samples in rows metabs in cols, the normalized intensities for each sample preceded by the name and any metadata for that sample
+  my.df <- t(normalized_int)
+
+  # Truncate overly long colnames
+  colnames(my.df) <- substr(colnames(my.df), 1, 40)
+
+  # Add empty data columns to df if < 20 metabolites were significantly changed for a contrast
+  if(ncol(my.df) < 20){
+    add <- 20 - ncol(my.df)
+    add.df <- data.frame(matrix(ncol = add, nrow = nrow(my.df)))
+    my.df <- cbind(my.df, add.df)
+  }
+
+  # Add sample names and metadata to peak data
+  my.df <- merge(Client_Data_Download[["metadata"]], my.df, by=0) %>% mutate_if(is.numeric, round, digits=4)
+  
+  # OPTIONAL To control the order of the x-axis . manual change arrange factor
+  if(length(class_order) > 1){
+    xform <- list(categoryorder = "array", categoryarray = class_order)
+  }
+
+  num = ncol(my.df) - 20 + 1
+  # Create the update drop-down menus
+  updatemenus <- list(
+    list(direction = "down",
+         x = -.3,
+         y = 0.9,
+         buttons = lapply(0:19, function(idx) {
+           list(
+             method = "update",
+             args = list(list(visible = as.logical(1:20 == idx + 1)),
+                         list(yaxis = list(title = "Peak intensity"))),
+             label = colnames(my.df)[num + idx]
+           )
+         })
+    )
+  )
+
+  m <- list(l = 220, r = 50, b = 50, t = 50)
+  plot <- plot_ly(data=my.df, x = boxplot_var, color = ~Class, yaxis = list(title = "Peak intensity"))
+
+  if(length(class_order) > 1){
+    plot <- plot %>% layout(xaxis = xform)
+  }
+
+  for (j in 0:19) {
+    plot <- plot %>%
+      add_trace(
+        type = 'violin',
+        x = boxplot_var,
+        y = my.df[,num + j],
+        visible = ifelse(j == 0, TRUE, FALSE),
+        points = "all",
+        jitter = 0.3,
+        pointpos = 0,
+        hoverinfo = 'text',
+        text = ~paste('Sample:', my.df$Sample.name)
+      )
+  }
+
+  plot <- plot %>%
+    layout(
+      updatemenus = updatemenus,
+      title = paste("Violin plot of peak intensities across ", Grouping_Variable),
+      showlegend = FALSE, yaxis = list(title = "Peak intensity")
+    ) %>%
+    add_annotations(
+      x = 'center', y = 1.05, text = paste("Top metabolites ", contrasts[[i]], sep=""),
+      xref = "paper", yref = "paper",
+      showarrow = FALSE
+    ) %>%
+    layout(autosize = F, width = 800, height = 400, margin = m)
+
+  violinplotlist[[i]] = plot
+}
+
+htmltools::tagList(violinplotlist)
+
 ```
 
 ## Heatmaps of changed metabolites
